# PipelinePilot

./: .gitignore  README.md  pyproject.toml  test_agent.py
agent/: graph.py  state.py
agent/nodes/: analyze_rca.py  apply_fix.py  fetch_logs.py  generate_patch.py  hitl_approval.py  refine_patch.py  retrieve_context.py
agent/prompts/: __init__.py  patch_prompt.py  rca_prompt.py
config/: settings.py
mcp_server/: server.py
mcp_server/tools/: filesystem_tools.py  git_tools.py  github_tools.py
rag/: __init__.py  indexer.py  retriever.py
tests/: test_mcp_tools.py
ui/: app.py
ui/components/: chat.py  hitl_card.py  settings_sidebar.py
