[project]
name = "pipelinepilot"
version = "0.1.0"
description = "LangGraph agent for GitHub Actions failure triage, RCA, patch proposals, and HITL-approved fixes (Streamlit + MCP)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastmcp>=3.2.4",
    "gitpython>=3.1.50",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"
pipelinepilot = "ui.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "agent", "config", "rag", "ui"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.streamlit]
server.port = 8501
